--- a/kmkscores/src/styles/LiveScore.css
+++ b/kmkscores/src/styles/LiveScore.css
@@ -4,12 +4,14 @@
     width: 100%;
     border-radius: 10px;
     margin-bottom: 15px;
-    background-color: antiquewhite;
+    background-color: #28231d;
+    border: 1px solid goldenrod;
 }
 
 .liveScore-img {
     width: 100px;
     border-radius: 10px;
+
 }
 
 .liveScore-text {
