--- a/kmkscores/src/index.css
+++ b/kmkscores/src/index.css
@@ -9,7 +9,8 @@
   padding: 20px;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
+  width: 100%;
 }
 
 body {
