--- a/kmkscores/src/styles/Header.css
+++ b/kmkscores/src/styles/Header.css
@@ -21,6 +21,27 @@
   top: -15px;
 }
 
+.header-dropdown-container {
+  padding: 20px;
+  border-bottom: 2px solid goldenrod;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-dropdown-escape {
+  padding: 5px 10px;
+  border-radius: 20px;
+  border: solid 1px #28231d;
+  cursor: pointer;
+}
+
+.header-dropdown-escape:hover {
+  padding: 5px 10px;
+  border-radius: 20px;
+  border: 1px solid goldenrod;
+}
+
 .header-dropdown-item {
   padding: 20px;
   border-bottom: 2px solid goldenrod;
@@ -43,4 +64,5 @@
 .header-title {
   font-family: "Roboto Mono", monospace;
   font-weight: 700;
+  cursor: pointer;
 }
