--- a/kmkscores/src/styles/LiveScore.css
+++ b/kmkscores/src/styles/LiveScore.css
@@ -1,30 +1,28 @@
 .liveScore {
-    display: flex;
-    justify-content: flex-start;
-    border-radius: 10px;
-    margin-bottom: 15px;
-    max-width: 600px;
-    width: 100%;
-
-    border: 2px solid goldenrod;
+  display: flex;
+  justify-content: flex-start;
+  border-radius: 10px;
+  margin-bottom: 15px;
+  max-width: 600px;
+  width: 100%;
+  cursor: pointer;
+  border: 2px solid goldenrod;
 }
 
-
 .liveScore-img {
-    width: 100px;
-    border-radius: 10px;
-
+  width: 100px;
+  border-radius: 10px;
 }
 
 .liveScore-text {
-    width: 100%;
+  width: 100%;
 }
 
-.liveScore-text-home, .liveScore-text-away {
-    display: flex;
-    justify-content: space-between;
-    height: 50%;
-    align-items: center;
-    padding: 0 15px;
+.liveScore-text-home,
+.liveScore-text-away {
+  display: flex;
+  justify-content: space-between;
+  height: 50%;
+  align-items: center;
+  padding: 0 15px;
 }
-
