--- a/kmkscores/src/index.css
+++ b/kmkscores/src/index.css
@@ -6,7 +6,7 @@
 }
 
 .livescoreContainer {
-  padding: 20px;
+  padding: 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,7 +17,7 @@ body {
   margin: 0;
   background-color: black;
   color: goldenrod;
-  font-family: 'Roboto Mono', monospace;
+  font-family: "Roboto Mono", monospace;
 }
 
 * {
