--- a/kmkscores/src/styles/Game.css
+++ b/kmkscores/src/styles/Game.css
@@ -27,6 +27,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  width: 33.3%;
 }
 
 .game-home-logo,
@@ -57,14 +58,22 @@
   font-size: 12px;
 }
 
+.game-referee {
+  font-size: 10px;
+}
+
+.game-venue {
+  font-size: 10px;
+}
+
 .homeEvent {
-  margin-top: 30px;
+  margin-top: 20px;
   display: flex;
   align-items: center;
 }
 
 .awayEvent {
-  margin-top: 30px;
+  margin-top: 20px;
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
@@ -73,8 +82,8 @@
 .event-imageContainer {
   background-color: lightgray;
   display: inline;
-  height: 35px;
-  width: 35px;
+  height: 25px;
+  width: 25px;
   margin: 0 5px;
   border-radius: 10px;
   display: flex;
@@ -83,10 +92,10 @@
 }
 
 .event-image {
-  height: 20px;
+  height: 15px;
 }
 
 .event-timeStamp,
 .event-playerName {
-  font-size: 18px;
+  font-size: 14px;
 }
