--- a/kmkscores/src/styles/Header.css
+++ b/kmkscores/src/styles/Header.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: #28231d;
+  background-color: black;
   width: 100%;
   display: flex;
   align-items: center;
@@ -7,6 +7,7 @@
   padding: 0 30px;
   position: relative;
   top: 0;
+  box-shadow: 0px 1px 5px goldenrod;
 }
 
 .header-dropdown {
