Refactor Refereee and Stadium Elements

--- a/kmkscores/src/styles/Game.css
+++ b/kmkscores/src/styles/Game.css
@@ -58,6 +58,11 @@
   font-size: 12px;
 }
 
+.game-refVenue-container {
+  display: flex;
+  justify-content: space-between;
+}
+
 .game-referee {
   font-size: 10px;
 }
