--- a/kmkscores/src/styles/Game.css
+++ b/kmkscores/src/styles/Game.css
@@ -8,7 +8,6 @@
 .game {
   border: solid 2px goldenrod;
   border-radius: 15px;
-  padding: 20px 15px;
   max-width: 800px;
   width: 100%;
 }
@@ -17,7 +16,7 @@
   display: flex;
   justify-content: space-between;
   border-bottom: 1px solid goldenrod;
-  padding-bottom: 10px;
+  padding: 20px 20px;
 }
 
 .game-home,
@@ -62,6 +61,7 @@
   display: flex;
   justify-content: space-between;
   margin: 5px 0 13px 0;
+  padding: 5px 20px;
 }
 
 .game-referee,
@@ -72,6 +72,7 @@
 .game-options {
   display: flex;
   justify-content: space-around;
+  margin-bottom: 5px;
 }
 
 .game-options-summary,
@@ -92,46 +93,6 @@
   border-radius: 20px;
 }
 
-.homeEvent {
-  margin-top: 20px;
-  display: flex;
-  align-items: center;
-}
-
-.awayEvent {
-  margin-top: 20px;
-  display: flex;
-  flex-direction: row-reverse;
-  align-items: center;
-}
-
-.event-imageContainer {
-  background-color: lightgray;
-  display: inline;
-  height: 25px;
-  width: 25px;
-  margin: 0 10px;
-  border-radius: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.event-image {
-  height: 15px;
-}
-
-.event-timeStamp,
-.event-playerName,
-.event-assistName {
-  font-size: 12px;
-}
-
-.event-timeStamp {
-  color: white;
-}
-
-.event-assistName {
-  color: lightgoldenrodyellow;
-  margin: 0 5px;
+.events-container {
+  padding: 20px;
 }
