--- a/kmkscores/src/styles/Lineups.css
+++ b/kmkscores/src/styles/Lineups.css
@@ -10,8 +10,7 @@
   color: black;
   background-color: goldenrod;
   text-align: center;
-  margin: 15px 0 5px 0;
-  border-radius: 10px;
+  margin: 10px 0 0 0;
 }
 
 .startLineups-container,
@@ -20,9 +19,16 @@
   display: flex;
   justify-content: space-between;
   align-self: stretch;
+  padding: 0 15px;
 }
 
-.startLineups-away-container {
+.coaches-container {
+  font-size: 13px;
+  padding: 5px 20px;
+}
+
+.startLineups-away-container,
+.substitutes-away-container {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
