Add UseApi Custom Hook

--- a/kmkscores/src/styles/Header.css
+++ b/kmkscores/src/styles/Header.css
@@ -7,7 +7,7 @@
   padding: 0 30px;
   position: relative;
   top: 0;
-  box-shadow: 0px 1px 5px goldenrod;
+  box-shadow: 0px 5px 5px #28231d;
 }
 
 .header-dropdown {
