--- a/kmkscores/src/styles/Game.css
+++ b/kmkscores/src/styles/Game.css
@@ -81,6 +81,7 @@
   border: solid 2px goldenrod;
   padding: 3px 8px;
   border-radius: 20px;
+  cursor: pointer;
 }
 
 .game-options-summarySelected,
@@ -91,6 +92,7 @@
   color: black;
   background-color: goldenrod;
   border-radius: 20px;
+  cursor: pointer;
 }
 
 .events-container {
