Add And Refactor New Logo

--- a/kmkscores/src/index.css
+++ b/kmkscores/src/index.css
@@ -16,7 +16,7 @@
 body {
   margin: 0;
   background-color: black;
-  color: goldenrod;
+  color: #f4a340;
   font-family: "Roboto Mono", monospace;
 }
 
