--- a/kmkscores/src/styles/Lineups.css
+++ b/kmkscores/src/styles/Lineups.css
@@ -8,7 +8,7 @@
 .substitutes-title,
 .coaches-title {
   color: black;
-  background-color: goldenrod;
+  background-color: #f4a340;
   text-align: center;
   margin: 10px 0 0 0;
 }
