--- a/kmkscores/src/styles/LiveScore.css
+++ b/kmkscores/src/styles/LiveScore.css
@@ -6,7 +6,7 @@
   max-width: 600px;
   width: 100%;
   cursor: pointer;
-  border: 2px solid goldenrod;
+  border: 2px solid #f4a340;
 }
 
 .liveScore-img {
