--- a/kmkscores/src/styles/Game.css
+++ b/kmkscores/src/styles/Game.css
@@ -31,8 +31,11 @@
 
 .game-home-logo,
 .game-away-logo {
-  width: 70px;
+  width: 100px;
   margin-bottom: 10px;
+  background-color: #28231d;
+  border-radius: 15px;
+  padding: 5px;
 }
 
 .game-info {
@@ -50,7 +53,7 @@
 }
 
 .game-info-score {
-  font-size: 20px;
+  font-size: 30px;
 }
 
 .game-info-minutes {
