--- a/kmkscores/src/styles/Header.css
+++ b/kmkscores/src/styles/Header.css
@@ -7,51 +7,8 @@
   padding: 0 30px;
   position: relative;
   top: 0;
+  height: 90px;
   box-shadow: 0px 5px 5px #28231d;
-}
-
-.header-dropdown {
-  position: absolute;
-  margin-left: -30px;
-  list-style-type: none;
-  padding: 0;
-  border: 1px solid grey;
-  width: 200px;
-  height: 100vh;
-  background-color: #28231d;
-  top: -15px;
-}
-
-.header-dropdown-container {
-  padding: 20px;
-  border-bottom: 2px solid #f4a340;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.header-dropdown-escape {
-  padding: 5px 10px;
-  border-radius: 20px;
-  border: solid 1px #28231d;
-  cursor: pointer;
-}
-
-.header-dropdown-escape:hover {
-  padding: 5px 10px;
-  border-radius: 20px;
-  border: 1px solid goldenrod;
-}
-
-.header-dropdown-item {
-  padding: 20px;
-  border-bottom: 2px solid #f4a340;
-  cursor: pointer;
-}
-
-.header-dropdown-item:hover {
-  border-bottom: 2px solid #f4a340;
-  background-color: black;
 }
 
 .header-menuIcon {
