--- a/kmkscores/src/styles/Menu.css
+++ b/kmkscores/src/styles/Menu.css
@@ -1,39 +1,42 @@
 .header-dropdown {
-  position: absolute;
-  margin-left: -30px;
-  list-style-type: none;
-  padding: 0;
-  border: 1px solid grey;
-  width: 200px;
-  height: 100vh;
-  background-color: #28231d;
-  top: -15px;
+  display: none;
 }
 
-@media (min-width: 601px) {
+@media (max-width: 599px) {
   .header-dropdown {
-    display: none;
+    position: absolute;
+    margin: 90px 0 0 -30px;
+    list-style-type: none;
+    padding: 0;
+    width: 200px;
+    height: 100vh;
+    background-color: black;
+    display: block;
+    top: 10px;
+    box-shadow: 0px 5px 5px #28231d;
   }
 }
 
 .menu {
-  list-style-type: none;
-  padding: 0;
-  border-right: 1px solid grey;
-  width: 200px;
-  height: 100vh;
-  background-color: black;
+  display: none;
 }
 
-@media (max-width: 600px) {
+@media (min-width: 600px) {
   .menu {
-    display: none;
+    margin: 0;
+    display: block;
+    list-style-type: none;
+    padding: 0;
+    width: 200px;
+    height: 100vh;
+    background-color: black;
+    box-shadow: 0px 5px 5px #28231d;
   }
 }
 
 .header-dropdown-container {
   padding: 20px;
-  border-bottom: 2px solid #f4a340;
+  height: 90px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -46,19 +49,28 @@
   cursor: pointer;
 }
 
-.header-dropdown-escape:hover {
-  padding: 5px 10px;
-  border-radius: 20px;
-  border: 1px solid goldenrod;
+.header-dropdown-item-container:first-child {
+  margin-top: 20px;
+}
+
+.header-dropdown-item-container {
+  padding: 20px;
 }
 
 .header-dropdown-item {
-  padding: 20px;
-  border-bottom: 2px solid #f4a340;
+  color: #f4a340;
+  border-radius: 25px;
+  padding: 15px 0;
+  border: 2px solid #f4a340;
   cursor: pointer;
+  transition: all 0.2s ease-in-out;
 }
 
 .header-dropdown-item:hover {
-  border-bottom: 2px solid #f4a340;
-  background-color: #28231d;
+  transform: scale(1.04);
+  opacity: 0.7;
+}
+.header-dropdown-item:active {
+  transform: scale(0.7);
+  opacity: 0.7;
 }
