--- a/kmkscores/src/index.css
+++ b/kmkscores/src/index.css
@@ -3,15 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
-}
-
-.livescoreContainer {
-  padding: 40px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
+  height: 100%;
 }
 
 body {
