--- a/kmkscores/src/styles/Header.css
+++ b/kmkscores/src/styles/Header.css
@@ -1,3 +1,7 @@
+.header-container {
+  width: 100%;
+}
+
 .header {
   background-color: black;
   width: 100%;
@@ -8,11 +12,11 @@
   position: relative;
   top: 0;
   height: 90px;
-  box-shadow: 0px 5px 5px #28231d;
+  box-shadow: 0px 2px 5px #28231d;
 }
 
 .header-menuIcon {
-  pointer-events: none;
+  cursor: pointer;
 }
 
 .header-searchIcon {
@@ -29,6 +33,6 @@
   .header-menuIcon {
     color: lightgray;
     cursor: default;
-    cursor: pointer;
+    pointer-events: none;
   }
 }
