--- a/kmkscores/src/styles/Home.css
+++ b/kmkscores/src/styles/Home.css
@@ -2,3 +2,44 @@
   display: flex;
   width: 100%;
 }
+
+.leagues-container {
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.leagues {
+  width: 100%;
+  padding: 20px;
+  border: 3px solid #f4a340;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+}
+
+.league {
+  width: 100%;
+}
+
+.league-header {
+  text-align: left;
+  cursor: pointer;
+  margin: 0 0 10px 0;
+  display: flex;
+  align-items: center;
+}
+
+.league-header-image {
+  width: 50px;
+  padding: 5px;
+  border-radius: 15px;
+  background-color: lightgray;
+  margin-right: 10px;
+}
+
+.league-header-title {
+  font-size: 30px;
+}
