--- a/kmkscores/src/styles/Home.css
+++ b/kmkscores/src/styles/Home.css
@@ -26,7 +26,6 @@
 
 .league-header {
   text-align: left;
-  cursor: pointer;
   margin: 0 0 10px 0;
   display: flex;
   align-items: center;
@@ -41,5 +40,8 @@
 }
 
 .league-header-title {
-  font-size: 30px;
+  width: 100%;
+  font-size: 24px;
+  cursor: pointer;
+  border-bottom: 1px solid #f4a340;
 }
