--- a/kmkscores/src/styles/Home.css
+++ b/kmkscores/src/styles/Home.css
@@ -61,6 +61,9 @@
     font-size: 12px;
     width: 100px;
   }
+  .league-header-title {
+    font-size: 16px;
+  }
 }
 
 .homeOptions-item-icon {
@@ -98,7 +101,7 @@
 
 .league-header-title {
   width: 100%;
-  font-size: 24px;
+  font-size: 22px;
   cursor: pointer;
   border-bottom: 1px solid #f4a340;
 }
