--- a/kmkscores/src/styles/Leagues.css
+++ b/kmkscores/src/styles/Leagues.css
@@ -11,6 +11,12 @@
   width: 100%;
 }
 
+.leagues-title {
+  margin: 0 0 25px 0;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #f4a340;
+}
+
 .leagues {
   width: 100%;
   padding: 20px;
@@ -25,6 +31,74 @@
 .search-container {
   display: flex;
   flex-direction: column;
+}
+
+.search-form {
+  margin: 20px 0;
+  padding: 0 20px;
+}
+
+.search-form-input {
+  background-color: black;
+  color: #f4a340;
+  border: 2px solid #f4a340;
+  border-radius: 20px;
+  height: 40px;
+  width: 100%;
+  font-size: 18px;
+  padding: 0 15px;
+}
+
+.search-form-input:focus {
+  outline: none;
+  border: 3px solid lightgoldenrodyellow;
+}
+
+.searchLeague-container {
+  display: flex;
+  flex-direction: column;
+  padding-left: 10px;
+}
+
+.searchLeague-country {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.searchLeague-country-name {
+  background-color: #28231d;
+  border-radius: 10px;
+  padding: 5px;
+  width: 100%;
+}
+
+.searchLeague {
+  display: flex;
+  padding: 5px 10px;
+  justify-content: space-between;
+}
+
+.searchLeague-name:hover {
+  transform: scale(1.04);
+  opacity: 0.7;
+}
+.searchLeague-name:active {
+  transform: scale(0.9);
+  opacity: 0.7;
+}
+
+.searchLeague-name {
+  cursor: pointer;
+}
+
+.searchLeague-star-container {
+  cursor: pointer;
+}
+
+.searchLeague-star-container-unselected {
+  cursor: pointer;
+  color: gray;
 }
 
 .options {
