--- a/kmkscores/src/styles/Game.css
+++ b/kmkscores/src/styles/Game.css
@@ -31,9 +31,9 @@
 
 .game-home-logo,
 .game-away-logo {
-  width: 100px;
+  height: 100px;
   margin-bottom: 10px;
-  background-color: #28231d;
+  background-color: #343231;
   border-radius: 15px;
   padding: 5px;
 }
@@ -45,6 +45,8 @@
 }
 
 .game-info-leagueLogo {
+  border-radius: 5px;
+  background-color: #343231;
   width: 30px;
 }
 
