--- a/kmkscores/src/styles/Contact.css
+++ b/kmkscores/src/styles/Contact.css
@@ -3,7 +3,7 @@
   width: 100%;
 }
 
-.teams-container {
+.contact-container {
   padding: 40px;
   display: flex;
   flex-direction: column;
@@ -11,14 +11,7 @@
   width: 100%;
 }
 
-.teams-title {
-  margin: 0 0 25px 0;
-  padding-bottom: 10px;
-  border-bottom: 1px solid #f4a340;
-  text-align: left;
-}
-
-.teams {
+.contact {
   width: 100%;
   padding: 20px;
   border: 3px solid #f4a340;
@@ -27,5 +20,10 @@
   flex-direction: column;
   max-width: 800px;
   height: auto;
-  text-align: center;
+}
+
+.contact-title {
+  margin: 0 0 25px 0;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #f4a340;
 }
