--- a/kmkscores/src/styles/Leagues.css
+++ b/kmkscores/src/styles/Leagues.css
@@ -11,12 +11,6 @@
   width: 100%;
 }
 
-.leagues-title {
-  margin: 0 0 25px 0;
-  padding-bottom: 10px;
-  border-bottom: 1px solid #f4a340;
-}
-
 .leagues {
   width: 100%;
   padding: 20px;
@@ -25,7 +19,13 @@
   display: flex;
   flex-direction: column;
   max-width: 800px;
-  height: 100%;
+  height: auto;
+}
+
+.leagues-title {
+  margin: 0 0 25px 0;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #f4a340;
 }
 
 .search-container {
