--- a/kmkscores/src/styles/Contact.css
+++ b/kmkscores/src/styles/Contact.css
@@ -27,3 +27,30 @@
   padding-bottom: 10px;
   border-bottom: 1px solid #f4a340;
 }
+
+.contact-para {
+  text-align: justify;
+  padding: 0 20px;
+}
+
+.contact-list {
+  list-style-type: none;
+  font-size: 18px;
+  padding: 0 0 0 20px;
+}
+
+a:link,
+a:visited {
+  color: #f4a340;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+@media (max-width: 450px) {
+  .contact {
+    font-size: 12px;
+  }
+  .contact-list {
+    font-size: 11px;
+  }
+}
