--- a/kmkscores/src/styles/Home.css
+++ b/kmkscores/src/styles/Home.css
@@ -54,7 +54,7 @@
   }
 }
 
-@media (max-width: 499px) {
+@media (max-width: 450px) {
   .homeOptions-item {
     font-size: 12px;
     width: 100px;
@@ -65,6 +65,10 @@
   }
   .league-header-title {
     font-size: 16px;
+  }
+
+  .homefixtures-container {
+    padding: 20px;
   }
 }
 
@@ -113,6 +117,18 @@
   width: 100%;
   font-size: 22px;
   cursor: pointer;
-  border-bottom: 1px solid #f4a340;
+  width: auto;
   margin: 0;
+}
+
+.league-header-title-container {
+  display: flex;
+  border-bottom: 1px solid #f4a340;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.league-header-title-icon {
+  cursor: pointer;
 }
