--- a/kmkscores/src/styles/Leagues.css
+++ b/kmkscores/src/styles/Leagues.css
@@ -22,10 +22,22 @@
   height: auto;
 }
 
-.leagues-title {
-  margin: 0 0 25px 0;
-  padding-bottom: 10px;
+.leagues-title-container {
+  display: flex;
+  justify-content: space-between;
   border-bottom: 1px solid #f4a340;
+  margin-bottom: 25px;
+  align-items: center;
+  padding-right: 10px;
+}
+
+.leagues-title {
+  margin: 0;
+  padding-bottom: 10px;
+}
+
+.leagues-title-return {
+  cursor: pointer;
 }
 
 .search-container {
@@ -35,7 +47,21 @@
 
 .search-form {
   margin: 20px 0;
-  padding: 0 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (min-width: 450px) {
+  .search-form {
+    padding: 0 20px;
+  }
+}
+
+@media (max-width: 450px) {
+  .search-form-icon {
+    display: none;
+  }
 }
 
 .search-form-input {
@@ -44,13 +70,23 @@
   border: 2px solid #f4a340;
   border-radius: 20px;
   height: 40px;
-  width: 100%;
+  width: 30%;
   font-size: 18px;
   padding: 0 15px;
+  transition: 0.9s;
+}
+
+.search-form-input::placeholder {
+  opacity: 0;
+}
+
+.search-form-input:focus::placeholder {
+  opacity: 0.4;
 }
 
 .search-form-input:focus {
   outline: none;
+  width: 100%;
   border: 3px solid lightgoldenrodyellow;
 }
 
@@ -133,14 +169,38 @@
   align-items: center;
 }
 
+.leagueTable-title-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+.leagueTable-title-logo {
+  width: 60px;
+  margin-right: 10px;
+}
+.leagueTable-title-text {
+  margin: 0;
+  width: 60%;
+  border-bottom: 1px solid #f4a340;
+}
+
+@media (max-width: 450px) {
+  .leagueTable-title-text {
+    font-size: 17px;
+  }
+}
+
 table {
   border-collapse: collapse;
 }
 
 td {
   font-size: 12px;
-  border-bottom: solid 1px #f4a340;
+  /* border-bottom: solid 1px #f4a340; */
+  border-left: solid 1px #f4a340;
   height: 40px;
+  text-align: center;
 }
 
 .logo-container {
@@ -167,6 +227,7 @@ td {
   align-items: center;
   justify-content: center;
   width: 100%;
+  justify-content: flex-start;
 }
 
 .web-display,
@@ -174,7 +235,7 @@ td {
   display: none;
 }
 
-@media (min-width: 750px) {
+@media (min-width: 800px) {
   .web-display,
   .web-display-form {
     display: table-cell;
@@ -185,7 +246,6 @@ td {
   }
 
   .team-name-text {
-    justify-content: flex-start;
     padding-left: 10px;
   }
 
@@ -195,5 +255,11 @@ td {
 
   td {
     font-size: 15px;
+  }
+}
+
+@media (max-width: 450px) {
+  .leagues-container {
+    padding: 20px;
   }
 }
