Refactor Game Header Stylings

--- a/kmkscores/src/styles/Events.css
+++ b/kmkscores/src/styles/Events.css
@@ -12,7 +12,7 @@
 }
 
 .event-imageContainer {
-  background-color: #28231d;
+  background-color: white;
   display: inline;
   height: 25px;
   width: 25px;
