--- a/kmkscores/src/styles/Game.css
+++ b/kmkscores/src/styles/Game.css
@@ -143,7 +143,7 @@
 }
 
 .events-container {
-  padding: 20px;
+  padding: 0 20px 20px 20px;
 }
 
 .game-prematchMessage {
@@ -159,14 +159,15 @@
 
 .events-halftimeBanner,
 .events-fulltimeBanner {
-  border: 1px solid #f4a340;
-  border-radius: 10px;
+  background-color: #f4a340;
+  border-radius: 15px;
+  color: black;
   display: flex;
-  justify-content: center;
+  padding: 2px 10px;
   margin-top: 20px;
 }
 
-.events-halftimeText,
-.events-fulltimeText {
-  justify-self: flex-start;
+.events-halftimeScore,
+.events-fulltimeScore {
+  margin: 0 auto;
 }
