--- a/kmkscores/src/styles/Teams.css
+++ b/kmkscores/src/styles/Teams.css
@@ -11,11 +11,23 @@
   width: 100%;
 }
 
-.teams-title {
-  margin: 0 0 25px 0;
-  padding-bottom: 10px;
+.teams-title-container {
+  display: flex;
+  justify-content: space-between;
   border-bottom: 1px solid #f4a340;
+  margin-bottom: 25px;
+  align-items: center;
+  padding-right: 10px;
+}
+
+.teams-title {
+  margin: 0;
+  padding-bottom: 10px;
   text-align: left;
+}
+
+.teams-title-return {
+  cursor: pointer;
 }
 
 .teams {
@@ -37,6 +49,7 @@
 }
 
 .search-container {
+  margin-bottom: 10px;
 }
 
 .teamSearch-form {
@@ -79,17 +92,19 @@
 
 .teamSearch-country {
   display: flex;
-  margin-bottom: 10px;
+  margin-top: 10px;
   align-items: flex-end;
+  cursor: pointer;
 }
 
 .teamSearch-country-flag {
   width: 50px;
   border-radius: 15px;
+  border: 1px solid #f4a340;
 }
 
 .teamSearch-country-name {
-  padding: 0 0 5px 20px;
+  padding-left: 10px;
   text-align: left;
   width: 100%;
   border-bottom: 1px solid #f4a340;
@@ -97,6 +112,9 @@
 
 .teamSearch-team {
   display: flex;
+  align-items: flex-end;
+  margin-top: 20px;
+  cursor: pointer;
 }
 
 .teamSearch-team-logo {
@@ -104,4 +122,8 @@
 }
 
 .teamSearch-team-name {
+  border-bottom: 1px solid #f4a340;
+  width: 100%;
+  text-align: left;
+  padding-left: 10px;
 }
