--- a/kmkscores/src/styles/Teams.css
+++ b/kmkscores/src/styles/Teams.css
@@ -127,3 +127,49 @@
   text-align: left;
   padding-left: 10px;
 }
+
+.teamHeader {
+  display: flex;
+}
+
+.teamHeader-logo {
+  width: 100px;
+  background-color: white;
+  border-radius: 25px;
+  padding: 5px;
+}
+
+.teamHeader-nameContainer {
+  width: 100%;
+  margin-left: 20px;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+}
+
+.teamHeader-name {
+  margin: 0 0 10px 0;
+}
+
+.teams-optionsContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+
+.teams-option {
+  border: 2px solid #f4a340;
+  padding: 3px 8px;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+.teams-option-selected {
+  border: 2px solid #f4a340;
+  padding: 3px 8px;
+  color: black;
+  background-color: #f4a340;
+  border-radius: 20px;
+  cursor: pointer;
+}
