--- a/kmkscores/src/styles/Teams.css
+++ b/kmkscores/src/styles/Teams.css
@@ -180,10 +180,16 @@
   display: flex;
   align-items: center;
   margin-top: 15px;
-  border-bottom: 1px solid #f4a340;
-  padding: 10px 20px;
+  border: 2px solid #f4a340;
+  padding: 10px;
   border-radius: 10px;
   text-align: left;
+  cursor: pointer;
+}
+
+.team-result-date {
+  border-right: 2px solid #f4a340;
+  height: 100%;
 }
 
 .team-result-names,
@@ -192,14 +198,48 @@
   flex-direction: column;
 }
 
+.team-result-nameContainer {
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.team-result-logo {
+  width: 20px;
+  margin-right: 10px;
+}
+
 .team-result-names {
   width: 100%;
   margin-left: 10px;
+  padding-left: 15px;
+  border-left: 2px solid #f4a340;
 }
 
 .team-result-matchResult {
-  margin-left: 20px;
+  margin-left: 10px;
   color: black;
-  padding: 3px 8px;
+  padding: 2px 7px;
   border-radius: 10px;
+}
+
+@media (max-width: 450px) {
+  .teams-option,
+  .teams-option-selected {
+    font-size: 12px;
+  }
+
+  .teamHeader-name {
+    font-size: 20px;
+  }
+
+  .team-result-names {
+    font-size: 12px;
+    padding-left: 8px;
+    margin-left: 5px;
+  }
+
+  .teamHeader-logo {
+    width: 80px;
+  }
 }
