--- a/kmkscores/src/styles/Home.css
+++ b/kmkscores/src/styles/Home.css
@@ -106,7 +106,9 @@
 }
 
 .league-header-image {
-  width: 50px;
+  width: 60px;
+  height: 60px;
+  object-fit: contain;
   padding: 5px;
   border-radius: 15px;
   background-color: lightgray;
