--- a/kmkscores/src/styles/Teams.css
+++ b/kmkscores/src/styles/Teams.css
@@ -112,9 +112,12 @@
 
 .teamSearch-team {
   display: flex;
-  align-items: flex-end;
+  justify-content: space-between;
+  align-items: center;
   margin-top: 20px;
   cursor: pointer;
+  width: 100%;
+  border-bottom: 1px solid #f4a340;
 }
 
 .teamSearch-team-logo {
@@ -122,10 +125,17 @@
 }
 
 .teamSearch-team-name {
-  border-bottom: 1px solid #f4a340;
-  width: 100%;
   text-align: left;
   padding-left: 10px;
+}
+
+.teamSearch-star-container {
+  cursor: pointer;
+}
+
+.teamSearch-star-container-unselected {
+  cursor: pointer;
+  color: gray;
 }
 
 .teamHeader {
