Add Favourites Teams Toggle Function To Team Page, Refactor Favourite Teams Toggle On Favourites Page

--- a/kmkscores/src/styles/Favourites.css
+++ b/kmkscores/src/styles/Favourites.css
@@ -47,7 +47,8 @@
   margin-bottom: 10px;
 }
 
-.favLeague-unselected {
+.favLeague-unselected,
+.team-unselected {
   display: flex;
   width: 100%;
   border: 1px dashed grey;
