--- a/kmkscores/src/styles/Home.css
+++ b/kmkscores/src/styles/Home.css
@@ -111,7 +111,7 @@
   object-fit: contain;
   padding: 5px;
   border-radius: 15px;
-  background-color: lightgray;
+  background-color: white;
   margin-right: 10px;
 }
 
